--- a/style.css
+++ b/style.css
@@ -1,37 +1,38 @@
+* {
+  margin: 0;
+}
 
-.sec1{
-    background-color: #1F2937;
-    display: flex;
-    flex-direction: row;
-    padding: 5em 7em;
-    justify-content: center;
+.sec1 {
+  background-color: #1f2937;
+  display: flex;
+  flex-direction: row;
+  padding: 5em 7em;
+  justify-content: center;
 }
-.img{
-    height: 300px;
-    margin-left: 50px;
+.img {
+  height: 300px;
+  margin-left: 50px;
 }
-.htext{
-    width: 400px;
-
+.htext {
+  width: 400px;
 }
-.hmain{
-    font-size: 48px;
-    font-weight: 800;
-    color: #F9FAF8;
-    margin: 0;
+.hmain {
+  font-size: 48px;
+  font-weight: 800;
+  color: #f9faf8;
+  margin: 0;
 }
-.hsec{
-    margin-top: 0;
-    font-size: 18px;
-    color: #E5E7EB;
+.hsec {
+  margin-top: 0;
+  font-size: 18px;
+  color: #e5e7eb;
 }
-.btn{
-    text-decoration: none;
-    background-color: #3882F6;
-    color: #F9FAF8;
-    font-weight: bold;
-    padding: 5px 20px ;
-    margin-top: 10px;
-    border-radius: 5px;
-
+.btn {
+  text-decoration: none;
+  background-color: #3882f6;
+  color: #f9faf8;
+  font-weight: bold;
+  padding: 5px 20px;
+  margin-top: 10px;
+  border-radius: 5px;
 }
