--- a/style.css
+++ b/style.css
@@ -43,4 +43,12 @@
 
 .quote {
   font-family: "RobotoLightItalic";
+  background-color: #e5e7eb;
+  font-size: 36px;
+  color: #1f2937;
+  padding: 200px 300px;
+}
+.quote div {
+  font-weight: bold;
+  text-align: right;
 }
