--- a/style.css
+++ b/style.css
@@ -7,23 +7,33 @@
   src: url(fonts/Roboto/Roboto-Bold.ttf);
 }
   
-#top-nav{
+nav {
     background-color: #1f2937;
     font-family: "Roboto",sans-serif;
-    font-size: 24px;
-    font-weight: 700;
-    color: #f9faf8;
     display: flex;
-    justify-content:space-between;
+    flex-wrap: wrap;
+}
+
+#coDet{
+  font-size: 24px;
+  font-weight: 700;
+  color: #f9faf8;
+  display: flex;
+  flex-direction: inherit;
+  width: 300px;
+  align-items: center;
+  flex-grow: 1;
+  padding: 5px;
 }
 .navList {
     width: 500px;
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
-a:link {
+a {
     font-size: 18px;
     font-weight:300;
     color: #e5e7eb;
@@ -78,4 +88,15 @@ a:link {
 .quote div {
   font-family: "RobotoBold";
   text-align: right;
+}
+
+footer{
+  height: 6vh;
+  background-color: #1f2937;
+  color: #e5e7eb;
+  font-family: "Roboto";
+  font-weight:300;
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
 }
