--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ a {
   display: grid;
   grid-template-columns: repeat(4, 1fr); /* Creates 4 equal-width columns */
   gap: 30px; /* Adjust this value to set the spacing between images */
-  padding: 30px;
+  padding: 30px 30px 110px 30px;
 }
 
 /* Style for each image */
