--- a/style.css
+++ b/style.css
@@ -115,6 +115,14 @@ a {
 }
 .buy {
   float: right;
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  font-size: 16px;
+  border-radius: 12px;
+  cursor: pointer;
 }
 /* Ashish Augustine */
 
