--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
   font-family: "RobotoBold";
   src: url(fonts/Roboto/Roboto-Bold.ttf) format("truetype");
 }
+@font-face {
+  font-family: "RobotoLight";
+  src: url(fonts/Roboto/Roboto-Light.ttf) format("truetype");
+}
 /* Ashish Augustine */
 
 /*copied from jo*/
@@ -106,6 +110,7 @@ a {
   grid-template-columns: repeat(4, 1fr); /* Creates 4 equal-width columns */
   gap: 30px; /* Adjust this value to set the spacing between images */
   padding: 30px 30px 110px 30px;
+  font-family: "RobotoLight", sans-serif;
 }
 
 /* Style for each image */
@@ -113,12 +118,13 @@ a {
   width: 100%; /* Ensure the image takes the full width of its container */
   height: auto; /* Maintain the aspect ratio of the image */
 }
+
 .buy {
   float: right;
-  background-color: #4caf50; /* Green */
+  background-color: #0021d97e;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 5px 20px;
   text-align: center;
   font-size: 16px;
   border-radius: 12px;
