--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
-* {
-  margin: 0;
-}
+
 @font-face {
   font-family: "RobotoLightItalic";
   src: url(fonts/Roboto/Roboto-LightItalic.ttf);
 }
 @font-face {
+  font-family: "RobotoRegular";
+  src: url(fonts/Roboto/Roboto-Regular.ttf);
+}
+@font-face {
   font-family: "RobotoBold";
   src: url(fonts/Roboto/Roboto-Bold.ttf);
 }
+* {
+   margin: 0;
+  font-family: "RobotoRegular";
+ }
 .sec1 {
   background-color: #1f2937;
   display: flex;
@@ -16,7 +22,7 @@
   padding: 5em 7em;
   justify-content: center;
 }
-.img {
+.head-img {
   height: 300px;
   margin-left: 50px;
 }
@@ -55,4 +61,34 @@
 .quote div {
   font-family: "RobotoBold";
   text-align: right;
+}
+.abt{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+.main-header{
+  font-size: 36px;
+  font-weight: 800;
+  color: #1f2937;
+  text-align: center;
+  margin: 20px;
+}
+.team-name{
+  font-size: 24px;
+  color: #1f2937;
+  margin: 20px;
+}
+.abt img{
+  height: 360px;
+  width: auto;
+  margin: 10px;
+}
+.abt-text{
+  margin: 10px;
+  width: 540px;
+  justify-content: center;
+  color: #1f2937 ;
 }
