--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   
 nav {
     background-color: #1f2937;
-    font-family: "Roboto",sans-serif;
+    font-family: "RobotoBold",sans-serif;
     display: flex;
     flex-wrap: wrap;
 }
@@ -108,29 +108,63 @@ footer{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  /* justify-content:space-around;  */
+  width: 80vw;
+  margin: auto;
+}
+
+#blogPg h2{
+  font-size: x-large;
 }
 .posts{
   display: flex;
-  flex-direction: row;
-  /* flex-wrap: wrap; */
+  margin: auto;
+  padding-top: 15px;
   width: 70%;
 }
-article{
+.posts article{
   margin: 10px;
   padding: 10px;
-  max-width: 300px;
+  width: 500px;
+}
+
+blockquote.quote{
+  width: 20vw;
+  margin: auto;
+  padding: 50px 300px;
+  color: #1f2937;
+  word-wrap: inherit;
 }
 .blogImg{
   height: 250px;
+  max-width: 100%;
+  margin: auto;
+  border-radius: 5px;
+}
+.blgDiv{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  /* width: max-content; */
+  justify-content:space-evenly;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 10px;
 }
 
 aside {
   width: 20%;
   padding: 15px;
-  /* margin: 10px; */
-  /* float: right; */
-  /* align-items:end; */
+  font-size: 18px;
   font-style: italic;
-  background-color: lightgray;
+  background-color: #e5e7eb;
+  color: #1f2937;
 }
+
+aside a, 
+aside li{
+  list-style: none;
+  color: #1f2937;
+  
+  line-height: 1.5em;
+}
+
