--- a/style.css
+++ b/style.css
@@ -113,18 +113,21 @@ footer{
 }
 
 #blogPg h2{
-  font-size: x-large;
+  font-size: 30px;
+  text-align: center;
+  line-height: 1.5em;
 }
 .posts{
   display: flex;
   margin: auto;
-  padding-top: 15px;
+  padding-top: 20px;
   width: 70%;
 }
 .posts article{
   margin: 10px;
   padding: 10px;
   width: 500px;
+  background-color: #e5e7eb;
 }
 
 blockquote.quote{
@@ -164,7 +167,6 @@ aside a,
 aside li{
   list-style: none;
   color: #1f2937;
-  
-  line-height: 1.5em;
+  line-height: 1.8em;
 }
 
