--- a/style.css
+++ b/style.css
@@ -114,18 +114,21 @@ footer{
 }
 
 #blogPg h2{
-  font-size: x-large;
+  font-size: 30px;
+  text-align: center;
+  line-height: 1.5em;
 }
 .posts{
   display: flex;
   margin: auto;
-  padding-top: 15px;
+  padding-top: 20px;
   width: 70%;
 }
 .posts article{
   margin: 10px;
   padding: 10px;
   width: 500px;
+  background-color: #e5e7eb;
 }
 
 blockquote.quote{
@@ -165,8 +168,7 @@ aside a,
 aside li{
   list-style: none;
   color: #1f2937;
-
-  line-height: 1.5em;
+  line-height: 1.8em;
 }
 .abt{
   display: flex;
@@ -198,4 +200,3 @@ aside li{
   justify-content: center;
   color: #1f2937 ;
 }
-
