--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: "RobotoLightItalic";
-  src: url(fonts/Roboto/Roboto-LightItalic.ttf);
+  src: url(fonts/Roboto/Roboto-LightItalic.ttf) format("truetype");
 }
 @font-face {
-  font-family: "RobotoRegular";
-  src: url(fonts/Roboto/Roboto-Regular.ttf);
+  font-family: "RobotoLight";
+  src: url(fonts/Roboto/Roboto-Light.ttf) format("truetype");
 }
 @font-face {
   font-family: "RobotoBold";
-  src: url(fonts/Roboto/Roboto-Bold.ttf);
+  src: url(fonts/Roboto/Roboto-Bold.ttf) format("truetype");
 }
 nav {
     background-color: #1f2937;
@@ -90,6 +90,37 @@ a {
 .quote div {
   font-family: "RobotoBold";
   text-align: right;
+}
+
+.title {
+  padding: 2em;
+}
+
+/* Set the container to be a grid layout */
+.image-grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* Creates 4 equal-width columns */
+  gap: 30px; /* Adjust this value to set the spacing between images */
+  padding: 30px 30px 110px 30px;
+  font-family: "RobotoLight", sans-serif;
+}
+
+/* Style for each image */
+.image-grid-item img {
+  width: 100%; /* Ensure the image takes the full width of its container */
+  height: auto; /* Maintain the aspect ratio of the image */
+}
+
+.buy {
+  float: right;
+  background-color: #0021d97e;
+  border: none;
+  color: white;
+  padding: 5px 20px;
+  text-align: center;
+  font-size: 16px;
+  border-radius: 12px;
+  cursor: pointer;
 }
 footer{
   height: 10vh;
