--- a/style.css
+++ b/style.css
@@ -149,13 +149,13 @@ footer {
   height: 10vh;
   background-color: #1f2937;
   color: #e5e7eb;
-  font-family: "Roboto";
   font-weight: 300;
   font-size: 18px;
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-direction: column;
+  padding-top: 10px;
 }
 
 #blogPg{
