--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 @font-face {
   font-family: "RobotoLightItalic";
   src: url(./fonts/Roboto/Roboto-LightItalic.ttf) format("truetype");
@@ -20,7 +18,7 @@
   margin: 0;
   font-family: "RobotoRegular";
 }
- 
+
 nav {
   background-color: #1f2937;
   font-family: "Roboto", sans-serif;
@@ -55,7 +53,8 @@ footer a {
   color: #e5e7eb;
   text-decoration: none;
 }
- 
+
+/*copied from jo - Finish*/
 .sec1 {
   background-color: #1f2937;
   display: flex;
@@ -93,10 +92,10 @@ footer a {
   transition: 0.3s;
   transition-property: background-color;
 }
-.btn:hover{
+.btn:hover {
   background-color: #21498d;
 }
- 
+/* Ashish Augustine - start */
 .quote {
   font-family: "RobotoLightItalic", sans-serif;
   background-color: #e5e7eb;
@@ -125,8 +124,8 @@ footer a {
 /* Style for each image */
 .image-grid-item img {
   width: 100%; /* Ensure the image takes the full width of its container */
-  height: 290px; /* Maintain the aspect ratio of the image */
-  object-fit: cover;
+  height: 290px;
+  object-fit: cover; /* Maintain the aspect ratio of the image */
 }
 
 .buy {
@@ -140,7 +139,6 @@ footer a {
   border-radius: 12px;
   cursor: pointer;
 }
- 
 
 footer {
   height: 10vh;
@@ -155,7 +153,7 @@ footer {
   padding-top: 10px;
 }
 
-#blogPg{
+#blogPg {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -163,32 +161,32 @@ footer {
   margin: auto;
 }
 
-#blogPg h2{
+#blogPg h2 {
   font-size: 30px;
   text-align: center;
   line-height: 1.5em;
 }
-.posts{
+.posts {
   display: flex;
   margin: auto;
   padding-top: 20px;
   width: 70%;
 }
-.posts article{
+.posts article {
   margin: 10px;
   padding: 10px;
   width: 500px;
   background-color: #e5e7eb;
 }
 
-blockquote.quote{
+blockquote.quote {
   width: 20vw;
   margin: auto;
   padding: 50px 300px;
   color: #1f2937;
   word-wrap: inherit;
 }
-.blogImg{
+.blogImg {
   height: 250px;
   max-width: 100%;
   border-radius: 5px;
@@ -197,12 +195,12 @@ blockquote.quote{
   margin-right: auto;
   padding: 10px;
 }
-.blgDiv{
+.blgDiv {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   /* width: max-content; */
-  justify-content:space-evenly;
+  justify-content: space-evenly;
   margin-top: 5px;
   margin-bottom: 5px;
   padding: 10px;
@@ -218,39 +216,37 @@ aside {
 }
 
 aside a,
-aside li{
+aside li {
   list-style: none;
   color: #1f2937;
   line-height: 1.8em;
 }
-.abt{
+.abt {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
-.main-header{
+.main-header {
   font-size: 36px;
   font-weight: 800;
   color: #1f2937;
   text-align: center;
   margin: 20px;
 }
-.team-name{
+.team-name {
   font-size: 24px;
   color: #1f2937;
   margin: 20px;
 }
-.abt img{
+.abt img {
   height: 360px;
   width: auto;
   margin: 10px;
 }
-.abt-text{
+.abt-text {
   margin: 20px;
   width: 540px;
   justify-content: center;
-  color: #1f2937 ;
+  color: #1f2937;
 }
-
