--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ footer a {
   background-color: #e5e7eb;
   font-size: 36px;
   color: #1f2937;
-  padding: 150px 350px;
+  padding: 150px 350px 120px 350px;
 }
 .quote div {
   font-family: "RobotoBold", sans-serif;
