--- a/style.css
+++ b/style.css
@@ -256,6 +256,11 @@ aside li {
   justify-content: center;
   padding: 30px;
   color: white;
+  margin-bottom: 30px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
 }
 
 #callToActionBTN {
