--- a/style.css
+++ b/style.css
@@ -248,7 +248,6 @@ aside li {
   color: #1f2937;
 }
 
-
 .callToAction {
   display: flex;
   background-color: #3882f6;
@@ -256,8 +255,8 @@ aside li {
   justify-content: center;
   padding: 30px;
   color: white;
-  margin-bottom: 30px;
-  margin-top: 30px;
+  margin-bottom: 100px;
+  margin-top: 100px;
   margin-left: auto;
   margin-right: auto;
   width: fit-content;
@@ -274,4 +273,8 @@ aside li {
   cursor: pointer;
   color: white;
   text-decoration: none;
+}
+.randominfo {
+  margin-top: 50px;
+  margin-bottom: 40px;
 }
