--- a/style.css
+++ b/style.css
@@ -110,19 +110,34 @@ footer a {
   padding: 2em;
 }
 
+/* Online shopping */
+.shoponline {
+  padding: 2em;
+  font-family: "RobotoBold", sans-serif;
+  color: #1f2937;
+}
 /* Set the container to be a grid layout */
 .image-grid-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr); /* Creates 4 equal-width columns */
-  gap: 30px; /* Adjust this value to set the spacing between images */
-  padding: 30px 30px 110px 30px;
+  display: flex;
+  flex-wrap: wrap;
   font-family: "RobotoLight", sans-serif;
+  padding: 5px;
+  margin-bottom: 70px;
+}
+
+.image-grid-item {
+  flex: 0 0 25%; /* Each image occupies 25% of the container width (4 images per row) */
+  padding: 15px; /* Adjust this value to set spacing between images */
+  box-sizing: border-box; /* Ensures padding is included in the item width */
 }
 
 /* Style for each image */
 .image-grid-item img {
   width: 100%; /* Ensure the image takes the full width of its container */
   height: 290px;
+  border: 1px solid #ccc; /* Optional: Add a border around the images */
+  border-radius: 5px; /* Optional: Add border-radius for a rounded look */
+
   object-fit: cover; /* Maintain the aspect ratio of the image */
 }
 
@@ -203,21 +218,6 @@ blockquote.quote {
   padding: 10px;
 }
 
-aside {
-  width: 20%;
-  padding: 15px;
-  font-size: 18px;
-  font-style: italic;
-  background-color: #e5e7eb;
-  color: #1f2937;
-}
-
-aside a,
-aside li {
-  list-style: none;
-  color: #1f2937;
-  line-height: 1.8em;
-}
 .abt {
   display: flex;
   flex-direction: column;
@@ -277,4 +277,29 @@ aside li {
 .randominfo {
   margin-top: 50px;
   margin-bottom: 40px;
+}
+.picture-list {
+  display: flex; /* Use flexbox to create a horizontal list */
+  justify-content: space-around; /* Distribute items evenly along the container */
+  list-style: none; /* Remove default list styles */
+  padding: 0;
+  margin: 10px 0; /* Margin top and bottom set to 10 pixels */
+}
+.random-info {
+  margin: 30px;
+  display: flex;
+  justify-content: center;
+}
+/* Styling each list item (picture with text) */
+.picture-item {
+  text-align: justify;
+  max-width: 250px;
+}
+
+/* Styling the images */
+.picture-item img {
+  width: 100%;
+  height: 50%;
+  border-radius: 10px;
+  margin-bottom: 10px; /* Space between the image and text */
 }
