--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ footer {
   font-size: 3em;
   text-align: left;
   line-height: 1.5em;
+  margin: 2px;
 }
 
 .sec2{
@@ -190,6 +191,7 @@ footer {
 }
 
 .sec2 div{
+  margin: 2px;
   padding: 20px;
   text-align: justify;
   word-wrap: break-word;
