--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ footer {
 
 .sec2{
   display: flex;
-  flex-wrap: nowrap;
+  flex-direction: row;
 }
 
 .sec2 div{
@@ -196,6 +196,8 @@ footer {
   text-align: justify;
   word-wrap: break-word;
 }
+
+
 .sec2 h3{
   font-size: 2em;
 }
