--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ footer a {
 
 /* Online shopping */
 .onlineshopping {
-  margin-bottom: 80px;
+  margin: 0px 20px 80px 20px;
 }
 .shoponline {
   padding: 2em;
