--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ footer {
   align-items: center;
   justify-content: space-around;
   flex-direction: column;
-  padding-top: 10px;
+  padding: 10px;
 }
 
 #blogPg {
