--- a/style.css
+++ b/style.css
@@ -178,27 +178,40 @@ footer {
   margin: auto;
 }
 
+.sec0 {
+  width: 100vw;
+  margin: 0;
+  padding-top: 2em;
+}
+
+#blogPg h1 {
+  font-size: 48px;
+  font-weight: 800;
+  color: #1f2937;
+  text-align: center;
+  padding: 10px;
+}
+
 #blogPg h2 {
-  font-size: 3em;
+  font-size: 2.5em;
   text-align: left;
   line-height: 1.5em;
   margin: 2px;
 }
 
-.sec2{
+.sec2 {
   display: flex;
   flex-direction: row;
 }
 
-.sec2 div{
+.sec2 div {
   margin: 2px;
   padding: 20px;
   text-align: justify;
   word-wrap: break-word;
 }
 
-
-.sec2 h3{
+.sec2 h3 {
   font-size: 2em;
 }
 .posts {
@@ -207,7 +220,7 @@ footer {
   padding-top: 20px;
   width: 75%;
 }
-.posts h3{
+.posts h3 {
   font-size: 2em;
   text-align: center;
   padding: 7px;
@@ -219,7 +232,7 @@ footer {
   background-color: #e5e7eb;
   text-align: justify;
 }
-#blogPg p{
+#blogPg p {
   word-wrap: break-word;
 }
 blockquote.quote {
@@ -232,9 +245,9 @@ blockquote.quote {
   word-wrap: inherit;
 }
 .blogImg {
-  height: 200px;
-  max-width: 80%;
-  border-radius: 5px;
+  height: 250px;
+  max-width: 90%;
+  border-radius: 10px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -245,9 +258,6 @@ blockquote.quote {
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
-  /* margin-top: 5px;
-  margin-bottom: 5px;
-  padding: 10px; */
 }
 .blgAside {
   width: 20%;
