--- a/style.css
+++ b/style.css
@@ -136,14 +136,20 @@ footer a {
   box-sizing: border-box; /* Ensures padding is included in the item width */
 }
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
+  .image-grid-item {
+    flex: 0 0 50%; /* Each image occupies 50% of the container width (4 images per row) */
+    padding: 15px; /* Adjust this value to set spacing between images */
+    box-sizing: border-box; /* Ensures padding is included in the item width */
+  }
+}
+@media screen and (max-width: 500px) {
   .image-grid-item {
     flex: 0 0 100%; /* Each image occupies 100% of the container width (4 images per row) */
     padding: 15px; /* Adjust this value to set spacing between images */
     box-sizing: border-box; /* Ensures padding is included in the item width */
   }
 }
-
 /* Style for each image */
 .image-grid-item img {
   width: 100%; /* Ensure the image takes the full width of its container */
