--- a/style.css
+++ b/style.css
@@ -172,7 +172,6 @@ footer {
 
 #blogPg {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
   width: 80vw;
   margin: auto;
@@ -204,11 +203,21 @@ footer {
   flex-direction: row;
 }
 
-.sec2 div {
-  margin: 2px;
+.part1{
+  flex: 50%;
+  padding:20px;
+  text-align: justify;
+}
+.part2{
+  flex: 50%;
   padding: 20px;
   text-align: justify;
-  word-wrap: break-word;
+}
+
+@media (max-width: 800px) {
+  .sec2 {
+    flex-direction: column;
+  }
 }
 
 .sec2 h3 {
@@ -256,7 +265,6 @@ blockquote.quote {
 .blgDiv {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
   justify-content: space-between;
 }
 .blgAside {
